# linear-algebra

./: AUTHORS  CHANGELOG  CMakeLists.txt  README  build_gcc_linux_unittest  install.cmake-dist
application/: CMakeLists.txt
cmake/modules/: CMakeLists.txt  FindCUDA.cmake  UseCUDA.cmake
deprecated/: ConjugateGradiant.h  Continue.h  CudaComplex.h  Functor.h  GPGPU.cpp  KrylovCPU.cpp  KrylovGPU.cpp  MatrixMarket.cpp  MultiplyMatVec.h  Object.h  PowerMethod.h  Reduce.h  Scal.h  TimerGPU.cpp  TimerGPU.h  cudacomplex.h  ggAlgo.h  ggChecker.h  ggComputeFunc.h  ggEasyLA.h  ggKrylov.h  ggKrylovCG.h  ggKrylovCG2.h  ggMarging.h  ggMargingCheckpoint.h  ggObject.h  ggPrintable.h  ggSolver.h  ggTimer.h  ggTimerCuda.h  ggUF.h  newdesign.cpp  newdesign.h
doc/api/: CMakeLists.txt  Doxyfile.in
https:/github.com/FurongHuang/: ConvDicLearnTensorFactor.git
src/: CMakeLists.txt
src/linear_algebra/: Array.h  BF.h  BO.h  BinarySolver.h  CG.h  CMakeLists.txt  Complex.h  ConstBF.h  ConstF.h  ConstTF.h  ConstUF.h  Dot.h  F.h  FunctorBase.h  FunctorStore.cpp  FunctorStore.h  Gemv.h  GemvCublas.h  Logger.cpp  Logger.h  Matrix.h  MatrixCublas.h  Multiply.h  MultiplyMatVec.h  MultiplyMatVecOp.h  Norm.h  NormOp.h  Object.h  Param.h  Parser.cpp  Parser.h  ParserLogger.cpp  ParserLogger.h  Persistent.cpp  Persistent.h  PowerMethod.h  PowerMethodStat.h  Printable.cpp  Printable.h  Scal.h  (+7 more)
src/linear_algebra/detail/: CMakeLists.txt
src/linear_algebra/detail/cublas/: CMakeLists.txt  Matrix.cu  Matrix.h  cublas  cublas.cu
src/linear_algebra/detail/cusp/: CMakeLists.txt  cusp  cusp.cu
src/linear_algebra/detail/cusparse/: CMakeLists.txt
src/linear_algebra/detail/device/: CMakeLists.txt  common.h
src/linear_algebra/detail/device/cublas/: Array.h  CMakeLists.txt  Dot.h  Gemv.h  Matrix.cu  Matrix.h  MultiplyMatVec.h  MultiplyMatVecOp.h  Norm.h  NormDefaultOp.h  NormOp.h  PowerMethod.h  Scal.h  Vector.h  common.h  cublas
src/linear_algebra/detail/device/cuda/: CMakeLists.txt  Complex.h  common.h  cuda  cuda.cu
src/linear_algebra/detail/device/cusp/: CMakeLists.txt  Dot.h  Matrix.h  MatrixBase.h  MatrixCOO.h  MatrixCSR.h  MatrixDIA.h  MatrixELL.h  MatrixHYB.h  MultiplyMatVec.h  MultiplyMatVecDefaultOp.h  MultiplyMatVecOp.h  Norm.h  NormDefaultOp.h  NormOp.h  PowerMethod.h  Scal.h  Vector.h  VectorBase.h  cusp
src/linear_algebra/detail/device/cusparse/: CMakeLists.txt  common.h  cusparse  cusparse.cu
src/linear_algebra/detail/device/original/: CMakeLists.txt  original  original.cu
src/linear_algebra/detail/host/original/: original
src/linear_algebra/detail/original/: CMakeLists.txt  original
src/linear_algebra/utils/: compatibility.h
test/: CMakeLists.txt  t-complex.cu  t-cublas-docexample.cu  t-cublas-dot-cplx.cu  t-cublas-gemv-cublas.cu  t-cublas-matvec-cplx.cu  t-cublas-norm-cplx.cu  t-cublas-norm.cu  t-cublas-powermethod-cublas.cu  t-cublas-powermethod.cu  t-cublas-scal-cplx.cu  t-cublas-scal.cu  t-cusp-matrix-csr.cu  t-cusp-matrix-dia.cu  t-cusp-matrix-ell.cu  t-cusp-matrix-hyb.cu  t-cusp-matvec-cusp.cu  t-cusp-matvec-dense.cu  t-cusp-matvec.cu  t-cusp-scal.cu
test/device/: CMakeLists.txt
test/device/cublas/: CMakeLists.txt  t-create-matrix.cu  t-dot.cu  t-matvec.cu  t-powermethod.cu
test/device/cuda/: CMakeLists.txt
test/device/cusp/: CMakeLists.txt  t-docexample.cu  t-dot.cu  t-matrix-coo.cu  t-norm.cu
test/device/cusparse/: CMakeLists.txt  t-docexample.cu
test/host/: CMakeLists.txt
