###############################################################################
##
## CMakeLists file for unit test
##
###############################################################################

LINK_LIBRARIES(${PROJECT_NAME})

ADD_SUBDIRECTORY(device)
ADD_SUBDIRECTORY(host)

###############################################################################
